# real-estate-agent

./: .env.example  .gitignore  AGENT_BUILD_PLAN.md  COMMIT_GUIDELINES.md  README.md  pyproject.toml  tracking.md
alembic/: env.py
app/agents/: __init__.py  graph.py  inventory.py  qualification.py  recommendation.py  state.py
app/api/: main.py
app/api/routes/: __init__.py  leads.py  metrics.py
app/core/: config.py  logging.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  agent_execution.py  conversation.py  customer.py  event.py  lead.py  message.py  models.py  property.py  tool_invocation.py  workflow_checkpoint.py  workflow_execution.py
app/eval/: deepeval_suite.py
app/events/: __init__.py  bus.py  schemas.py
app/llm/: __init__.py  gateway.py  guardrails.py
app/mcp/: __init__.py  client.py  registry.py
app/mcp/servers/: __init__.py  crm_server.py  inventory_server.py
app/observability/: __init__.py  tracing.py
app/workers/: __init__.py  celery_app.py  tasks.py
streamlit_app/: Home.py  __init__.py
streamlit_app/components/: __init__.py  agents.py  insights.py  overview.py  workflows.py
streamlit_app/pages/: 1_Dashboard.py  2_Lead_Intake.py  3_Knowledge_Base.py  4_Documentation.py  5_Live_Workflow_Monitor.py  6_Graph_Visualizer.py  7_Agent_Dashboard.py  __init__.py
streamlit_app/static/: style.css
tests/: test_metrics.py
